--- a/templates/base.html
+++ b/templates/base.html
@@ -2,16 +2,13 @@
 <html>
 <head>
     <title>Главная страница</title>
+    {%include 'top_menu_links.html'%}
 </head>
 <body>
-    <div class="container mt-4">
-        <div id="content">
-            <div class="container text-center">
-                <h1>Добро пожаловать на страницу</h1>
-                <h5>Здесь вы можете начать работу с нашим сервисом</h5>
-            </div>
-        </div>
-    </div>
+
+    {% include 'top_menu.html' %}
+    <h1>Добро пожаловать на страницу</h1>
+    <h5>Здесь вы можете начать работу с нашим сервисом</h5>
 
 </body>
 </html>
