--- a/templates/create_question.html
+++ b/templates/create_question.html
@@ -63,6 +63,8 @@
             <!-- Кнопка "Сохранить" -->
             <button type="submit" class="btn btn-primary" id="saveButton">Сохранить</button>
         </form>
+        <!-- Кнопка "Назад" -->
+        <a href="/question" class="btn btn-outline-primary mt-3">Назад</a>
     </div>
 
     <!-- Подключаем скрипты Bootstrap и JavaScript -->
