--- a/templates/top_menu.html
+++ b/templates/top_menu.html
@@ -5,30 +5,29 @@
     <title>Title</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-
 </head>
 <body>
     <div class="top-menu">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <ul class="navbar-nav mr-auto">
-                     <li class="nav-item">
-                        <a class="nav-link" href="/" onclick="loadPage('/')">Главная страница <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/tests" onclick="loadPage('/tests')">Тесты <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/question" onclick="loadPage('/question')">Вопросы</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/create_tests" onclick="loadPage('/create_tests')">Создание теста</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/statistics" onclick="loadPage('/statistics')">Статистика</a>
-                    </li>
-                </ul>
-            </nav>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="/" onclick="loadPage('/')">Главная страница <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/tests" onclick="loadPage('/tests')">Тесты <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/question" onclick="loadPage('/question')">Вопросы</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/statistics" onclick="loadPage('/statistics')">Статистика</a>
+                </li>
+            </ul>
+            <div class="ml-auto">
+                <a href="{{ url_for('login') }}" class="btn btn-outline-primary">Войти</a>
+        </div>
+        </nav>
     </div>
-  {% block content %}{% endblock %}
+    {% block content %}{% endblock %}
 </body>
 </html>
