--- a/templates/tests.html
+++ b/templates/tests.html
@@ -1,13 +1,65 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Test</title>
-    {%include 'top_menu_links.html'%}
+    <meta charset="UTF-8">
+    <title>Список тестов</title>
+    {% include 'top_menu_links.html'%}
+    <!-- Подключаем стили Bootstrap -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <style>
+        .question-card {
+            border: 1px solid #dee2e6;
+            border-radius: 5px;
+            padding: 20px;
+            margin-bottom: 20px;
+            transition: box-shadow 0.3s ease;
+            width: calc(90% - 20px);
+            margin-right: 20px;
+            margin-bottom: 20px;
+            display: inline-block;
+            vertical-align: top;
+            position: relative; /* Добавляем относительное позиционирование для кнопки удаления */
+        }
+
+        .question-card:hover {
+            box-shadow: 0 0 11px rgba(33,33,33,.2);
+        }
+
+        .question-link {
+            color: inherit;
+            text-decoration: none;
+        }
+
+        .question-image {
+            max-width: 150px; /* Уменьшил максимальную ширину изображения */
+            max-height: 100px; /* Уменьшил максимальную высоту изображения */
+            border-radius: 5px; /* Добавляем закругление углов */
+            margin-right: 20px; /* Добавляем отступ справа от изображения */
+            float: left; /* Выравниваем изображение по левому краю */
+        }
+    </style>
 </head>
 <body>
-
     {% include 'top_menu.html' %}
-    <h1 class="mb-4">Тут будет тест</h1>
 
+        <h1>Список тестов</h1>
+        <div class="row">
+            {% for test in all_tests %}
+                <div class="col-md-12 mb-3">
+                    <a href="/tests/{{ test.id }}" class="question-link">
+                        <div class="question-card">
+                            <img src="{{ url_for('static', filename=test.image_url) }}" alt="Изображение теста" class="question-image">
+                            <div class="row">
+                                <div class="col-md-8">
+                                    <h4>{{ test.name }}</h4>
+                                    <p>{{ test.duration }}</p>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            {% endfor %}
+        </div>
+    </div>
 </body>
 </html>
