add roles and page authorization

--- a/templates/register.html
+++ b/templates/register.html
@@ -2,15 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Вход</title>
+    <title>Регистрация</title>
     {% include 'top_menu_links.html'%}
 </head>
 <body>
 
 {% include 'top_menu.html' %}
 <div class="container">
-    <h1>Авторизация</h1>
-    <form method="POST" action="{{ url_for('login') }}">
+    <h1>Регистрация</h1>
+    <form method="POST" action="{{ url_for('register') }}">
         {{ form.csrf_token }}
         <div class="form-group">
             {{ form.username.label }}
@@ -20,9 +20,12 @@
             {{ form.password.label }}
             {{ form.password(class="form-control") }}
         </div>
+        <div class="form-group">
+            {{ form.confirm_password.label }}
+            {{ form.confirm_password(class="form-control") }}
+        </div>
         {{ form.submit(class="btn btn-primary") }}
     </form>
-    <p>Еще не зарегистрированы? <a href="{{ url_for('register') }}">Зарегистрируйтесь</a></p>
 </div>
 
 </body>
