--- a/templates/statistics.html
+++ b/templates/statistics.html
@@ -3,12 +3,118 @@
 <head>
     <meta charset="UTF-8">
     <title>Статистика</title>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     {%include 'top_menu_links.html'%}
 </head>
 <body>
 
     {% include 'top_menu.html' %}
-    <h1>Тут будет статистика </h1>
+    <h1>Статистика по вопросов</h1>
 
+    <style>
+    .chart-container {
+        text-align: center;
+        max-width: 300px;
+        margin: 0 auto;
+    }
+    .chart-container canvas {
+        max-width: 100%;
+        max-height: 200px;
+    }
+    .chart-container h2 {
+        font-size: 14px;
+    }
+</style>
+
+<div style="display: flex;">
+    <div style="flex: 1; margin-right: 10px;" class="chart-container">
+        <canvas id="difficultyChart"></canvas>
+        <h2>Вопросы по категориям сложности</h2>
+    </div>
+    <div style="flex: 1; margin-right: 10px;" class="chart-container">
+        <canvas id="modalityChart"></canvas>
+        <h2>Вопросы по модальностям</h2>
+    </div>
+    <div style="flex: 1;" class="chart-container">
+        <canvas id="targetChart"></canvas>
+        <h2>Вопросы по целевым областям тела</h2>
+    </div>
+</div>
+
+<script>
+    // Данные для диаграмм
+    var difficultyData = {
+        labels: [{% for difficulty, _ in difficulty_counts %}'{{ difficulty }}', {% endfor %}],
+        datasets: [{
+            data: [{% for _, count in difficulty_counts %}{{ count }}, {% endfor %}],
+            backgroundColor: 'rgba(54, 162, 235, 0.5)'
+        }]
+    };
+
+    var modalityData = {
+        labels: [{% for modality, _ in modality_counts %}'{{ modality }}', {% endfor %}],
+        datasets: [{
+            data: [{% for _, count in modality_counts %}{{ count }}, {% endfor %}],
+            backgroundColor: 'rgba(75, 192, 192, 0.5)'
+        }]
+    };
+
+    var targetData = {
+        labels: [{% for target, _ in target_counts %}'{{ target }}', {% endfor %}],
+        datasets: [{
+            data: [{% for _, count in target_counts %}{{ count }}, {% endfor %}],
+            backgroundColor: 'rgba(255, 99, 132, 0.5)'
+        }]
+    };
+
+    // Создание диаграмм
+    var difficultyChart = new Chart(document.getElementById('difficultyChart'), {
+        type: 'bar',
+        data: difficultyData,
+        options: {
+            legend: {
+            display: false
+        },
+        title: {
+            display: false,
+        },
+            scales: {
+                yAxes: [{
+                    ticks: {
+                        beginAtZero: true
+                    }
+                }]
+            }
+        }
+    });
+
+    var modalityChart = new Chart(document.getElementById('modalityChart'), {
+        type: 'bar',
+        data: modalityData,
+        options: {
+            scales: {
+                yAxes: [{
+                    ticks: {
+                        beginAtZero: true
+                    }
+                }]
+            }
+        }
+    });
+
+    var targetChart = new Chart(document.getElementById('targetChart'), {
+        type: 'bar',
+        data: targetData,
+        options: {
+            scales: {
+                yAxes: [{
+                    ticks: {
+                        beginAtZero: true
+                    }
+                }]
+            }
+        }
+    });
+  </script>
 </body>
 </html>
