--- a/templates/main_go_test.html
+++ b/templates/main_go_test.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     {% include 'top_menu.html' %}
+    <h3>Тест начнется после нажатия на кнопку "приступить к тесту". У вас есть ровно час на выполнение заданий.</h3><br>
+    <h3>Количество и сложность вопросов варьируется в зависимости от вашего ответа.</h3>
      <a href="/tests/{{test_id}}/main_go_test/{{ random_id }}">Приступить к тесту </a>
 </body>
 </html>
