--- a/templates/question_edit.html
+++ b/templates/question_edit.html
@@ -21,15 +21,6 @@
                 <input type="file" class="form-control-file" id="image" name="image">
             </div>
 
-<!--              <div class="form-group">-->
-<!--    <label for="image">Загрузить изображение:</label>-->
-<!--    <input type="file" class="form-control-file" id="image" name="image" accept="image/*">-->
-<!--    <small id="imageHelpBlock" class="form-text text-muted">Выберите изображение в формате JPG, PNG или GIF.</small>-->
-<!--    <br>-->
-<!--    <img id="previewImage" src="default_image.jpg" alt="Default Image" style="max-width: 200px;">-->
-<!--</div>-->
-
-
             <!-- Ввод вопроса -->
             <div class="form-group">
                 <label for="text">Вопрос:</label>
@@ -93,7 +84,13 @@
 
             <!-- Кнопка "Сохранить" -->
             <button type="submit" class="btn btn-primary" id="saveButton">Сохранить</button>
-          </form>
+
+            <!-- Кнопка "Удалить вопрос" -->
+            <form action="{{ url_for('delete_question', question_id=question_id) }}" method="post" class="mt-3">
+                <button type="submit" class="btn btn-danger">Удалить вопрос</button>
+            </form>
+        </form>
+
         <!-- Кнопка "Назад" -->
         <a href="/question" class="btn btn-outline-primary mt-3">Назад</a>
     </div>
