--- a/templates/base.html
+++ b/templates/base.html
@@ -2,13 +2,37 @@
 <html>
 <head>
     <title>Главная страница</title>
-    {%include 'top_menu_links.html'%}
+    <link rel="stylesheet" type="text/css" href="styles.css">
+    {% include 'top_menu_links.html' %}
 </head>
+<style>
+button#startTestButton {
+    display: block;
+    margin: 0 auto;
+    margin-top: 20px;
+    background-color: black;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: background-color 0.3s, color 0.3s;
+}
+
+button#startTestButton:hover {
+    background-color: gold;
+    color: black;
+}
+ </style>
 <body>
 
     {% include 'top_menu.html' %}
     <h1>Добро пожаловать на страницу</h1>
-    <h5>Здесь вы можете начать работу с нашим сервисом</h5>
 
+    <!-- Форма для отправки POST-запроса -->
+    <form method="POST">
+        <button type="submit" id="startTestButton" class="animate-button">Начать тестирование</button>
+    </form>
 </body>
 </html>
