add photo in tests

--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,8 @@
     {% include 'top_menu_links.html' %}
 </head>
 <style>
+
+
 button#startTestButton {
     display: block;
     margin: 0 auto;
@@ -24,8 +26,9 @@ button#startTestButton:hover {
     background-color: gold;
     color: black;
 }
+
  </style>
-<body>
+<body style="background-color: beige;">
 
     {% include 'top_menu.html' %}
     <h1>Добро пожаловать на страницу</h1>
